# arbiter

./: .env.example  .gitignore  AGENTS.md  MEMORY.md  README.md  alembic.ini  docker-compose.yml  openclaw.json  pyproject.toml  requirements.txt  run_arbiter_stack.sh
alembic/: env.py
alembic/versions/: 20260309_000001_init_data_tables.py
arbiter/: __init__.py  main.py
arbiter/agent/: market_overview.py
arbiter/agents/: __init__.py  portfolio_agent.py  research_agent.py  trader_agent.py
arbiter/backtest/: __init__.py  runner.py
arbiter/config/: universe.py
arbiter/data/: __init__.py  market_service.py
arbiter/execution/: __init__.py  engine.py
arbiter/historical_importers/: yahoo_importer.py
arbiter/market_store/: __init__.py  operations.py  queries.py  schema.py
arbiter/mcp/: __init__.py
arbiter/nt_bridge/: dataset.py
arbiter/openclaw/: agent.yaml  market_scan_task.py  persona.md
arbiter/portfolio/: __init__.py  allocator.py  risk.py
docs/: CURSOR_IMPLEMENTER.md  IB_PAPER_MARKET_CAP_CONFIG.md  INSTALL.md  README.md  REPO_COLLABORATION_RULES.md  REPO_RESTRUCTURE_PLAN.md  arbiter_market_data_phase_guide_v1.md  architecture.md  cursor_bootstrap.md  data-layer-phase.md  data-layer-target.md  data_protocol.md  mcp_capabilities.md  roadmap.md
memory/: 2026-03-12-smoke-test.md  2026-03-12-workspace-init.md
scripts/: install_ib_deps.sh  setup_venv.sh  validate_market_cap_rotation.sh  validate_mock_backtest.sh  validate_quarterly_rebalance.sh  validate_ticket_fixes.sh  verify_market_cap_tools.sh  verify_market_cap_yahoo.sh
system/: Untitled
tests/: __init__.py  test_agent_overview.py  test_market_refresh.py  test_market_refresh_pg.py  test_market_repository_pg.py  test_market_vertical_slice.py  test_mcp_server.py  test_news_refresh_pg.py  test_news_repository_pg.py  test_scheduler.py  test_scheduler_agent_integration.py  test_yahoo_market_provider.py
workspace/: AGENTS.md  TOOLS.md  USER.md
(+327 files in other folders)
