[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "0.1.0"
description = "An experimental multi-agent research and trading arbiter framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "xiaoyu" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lingli-pansy/arbiter"

[tool.setuptools]
packages = ["arbiter"]

