[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "0.1.0"
description = "An experimental multi-agent research and trading arbiter framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "xiaoyu" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg>=3.1.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "yfinance>=0.2.50",
  "APScheduler>=3.10.4",
]

[project.urls]
Homepage = "https://github.com/lingli-pansy/arbiter"

[tool.setuptools]
packages = ["arbiter"]

